<resources>
    <string name="app_name">FYP</string>
    <string name="buttonString">Button</string>
    <string name="location">Location</string>
    <string name="getLocation">Get Location</string>
    <string name="LoginTitle">IFMS</string>
    <string name="LoginButton">Login</string>
    <string name="idCompany">Company ID</string>
    <string name="StringCompany">Company</string>
    <string name="idCode">Vehicle ID</string>
    <string name="Password">Password</string>
    <string name="demo">Demo</string>
    <string name="NumberPlate">Number Plate: </string>
    <string name="Status">Status: </string>
    <string name="LogOut">Log Out </string>
    <string name="ReportProblem">Report Issue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
