<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/topLayerId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="15dp">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/idVehicleIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="7dp"
            android:src="@drawable/vehicle_icon" />

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/idDetailBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/StringCompany"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_marginEnd="5dp"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/idcompanyNameField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Placeholder"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/roboto_light"
                    android:textSize="16sp"/>
            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NumberPlate"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_marginEnd="5dp"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/idnumberPlateField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Placeholder"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/roboto_light"
                    android:textSize="16sp"/>
            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Status"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/idVehicleStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Placeholder"
                    android:fontFamily="@font/roboto_light"
                    android:textSize="16sp"/>
            </android.support.v7.widget.LinearLayoutCompat>



        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintTop_toBottomOf="@id/topLayerId"
        android:background="@drawable/rounded_bottom"
        >

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/detailToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_outline_expand_more_24px"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/roboto"
        android:text="@string/location"
        app:layout_constraintBottom_toTopOf="@+id/getLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />
    <Button
        android:id="@+id/getLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/getLocation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />


    <Button
        android:id="@+id/idLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/LogOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getLocation" />
</android.support.constraint.ConstraintLayout>